<resources>
    <string name="app_name">Calculator App</string>
    <string name="input_number">Masukkan minimal 2 angka dalam list</string>
    <string name="number">Angka :</string>
    <string name="number_list">Angka dalam list :</string>
    <string name="substract">substract</string>
    <string name="add">Add</string>
    <string name="multiply">multiply</string>
    <string name="spliteq">splitEq</string>
    <string name="splitnum">splitNum</string>

    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="clear">clear</string>
    <string name="empty">0</string>
    <string name="ok">Masukkan Angka</string>
</resources>