<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_rules"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_number"
        android:textColorHint="@color/black"
        android:layout_margin="12dp"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_number"
        app:layout_constraintTop_toBottomOf="@id/tv_rules"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="12dp"
        android:text="@string/number"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_number_value"
       app:layout_constraintTop_toBottomOf="@id/tv_rules"
        app:layout_constraintStart_toEndOf="@id/tv_number"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black"
        android:text="@string/empty"
        android:layout_margin="12dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_number_list"
        app:layout_constraintTop_toBottomOf="@id/tv_number_value"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="12dp"
        android:text="@string/number_list"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_number_list_value"
        app:layout_constraintTop_toBottomOf="@id/tv_number_value"
        app:layout_constraintStart_toEndOf="@id/tv_number_list"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="12dp"
        android:text="@string/empty"
        android:textColor="@color/black"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />


    <Button
        android:id="@+id/add"
        app:layout_constraintTop_toBottomOf="@id/tv_number_list_value"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@id/sub"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textAllCaps="false"
        android:text="@string/add"
        android:textSize="25sp"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/sub"
        app:layout_constraintTop_toBottomOf="@id/add"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/substract"
        android:textSize="25sp"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/mul"
        app:layout_constraintTop_toBottomOf="@id/sub"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/sub"
        android:layout_marginStart="12dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/multiply"
        android:textSize="25sp"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/splitEq"
        app:layout_constraintTop_toBottomOf="@id/mul"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/mul"
        android:layout_marginStart="12dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:layout_marginBottom="16dp"
        android:text="@string/spliteq"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/splitNum"
        app:layout_constraintTop_toBottomOf="@id/splitEq"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/mul"
        android:layout_marginStart="12dp"
        android:textAllCaps="false"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/splitnum"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/btn_1"
        app:layout_constraintTop_toTopOf="@id/add"
        app:layout_constraintStart_toEndOf="@id/add"
        android:layout_marginStart="12dp"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/number_1"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/btn_2"
        app:layout_constraintTop_toTopOf="@id/btn_1"
        app:layout_constraintStart_toEndOf="@id/btn_1"
        android:layout_marginStart="12dp"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/number_2"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/btn_3"
        app:layout_constraintTop_toBottomOf="@id/btn_1"
        app:layout_constraintStart_toEndOf="@id/mul"
        android:layout_marginStart="12dp"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/number_3"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/btn_4"
        app:layout_constraintTop_toBottomOf="@id/splitEq"
        app:layout_constraintStart_toEndOf="@id/btn_3"
        app:layout_constraintTop_toTopOf="@id/btn_3"
        android:layout_marginStart="12dp"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/number_4"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/btn_5"
        app:layout_constraintTop_toBottomOf="@id/btn_3"
        app:layout_constraintStart_toEndOf="@id/mul"
        android:layout_marginStart="12dp"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/number_5"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/btn_6"
        app:layout_constraintTop_toBottomOf="@id/btn_4"
        app:layout_constraintStart_toEndOf="@id/btn_5"
        android:layout_marginStart="12dp"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/number_6"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/btn_7"
        app:layout_constraintTop_toBottomOf="@id/btn_5"
        app:layout_constraintStart_toEndOf="@id/mul"
        android:layout_marginStart="12dp"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/number_7"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/btn_8"
        app:layout_constraintTop_toBottomOf="@id/btn_5"
        app:layout_constraintStart_toEndOf="@id/btn_7"
        android:layout_marginStart="12dp"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/number_8"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/btn_9"
        app:layout_constraintTop_toBottomOf="@id/btn_7"
        app:layout_constraintStart_toEndOf="@id/mul"
        android:layout_marginStart="12dp"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/number_9"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/btn_0"
        app:layout_constraintTop_toTopOf="@id/btn_9"
        app:layout_constraintBottom_toBottomOf="@id/btn_9"
        app:layout_constraintStart_toEndOf="@id/btn_9"
        android:layout_marginStart="12dp"
        android:text="@string/empty"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_clear"
        app:layout_constraintTop_toBottomOf="@id/btn_9"
        app:layout_constraintStart_toStartOf="@id/splitNum"
        app:layout_constraintEnd_toEndOf="@id/btn_0"
        android:text="@string/clear"
        android:backgroundTint="@color/red"
        android:textSize="25sp"
        android:textAllCaps="false"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_ok"
        app:layout_constraintTop_toBottomOf="@id/btn_clear"
        app:layout_constraintStart_toStartOf="@id/splitNum"
        app:layout_constraintEnd_toEndOf="@id/btn_clear"
        android:text="@string/ok"
        android:textColor="@color/purple_700"
        android:backgroundTint="@color/white"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/result"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/btn_ok"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        tools:text="Hasil : 20000000000000000000000000"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />


</androidx.constraintlayout.widget.ConstraintLayout>